<?xml version="1.0"?>
<package format="3">
  <name>uuv_ekf</name>
  <version>0.0.0</version>
  <description>localization package</description>
  <maintainer email="mohameddbardana@gmail.com">momagdii</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
